// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifExpertApp /> Debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h1
    className="animate__animated animate__fadeInRightBig"
  >
    GifExpertApp
  </h1>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <div>
    <ol />
  </div>
  <footer>
    Copyright © 2022 - Willinton Mora
  </footer>
</Fragment>
`;

exports[`Pruebas en el componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1
    className="animate__animated animate__fadeInRightBig"
  >
    GifExpertApp
  </h1>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <div>
    <ol>
      <GifGrid
        category="One Punch"
        key="One Punch"
      />
      <GifGrid
        category="Samurai X"
        key="Samurai X"
      />
      <GifGrid
        category="Dragon Ball"
        key="Dragon Ball"
      />
    </ol>
  </div>
  <footer>
    Copyright © 2022 - Willinton Mora
  </footer>
</Fragment>
`;
